compiler/tools/fpp-check/test/invalid_symbols/topology_as_qualifier.fpp
topology M {

  import M.T

}

